--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -229,51 +229,53 @@
     </div>
 </div>
 
-<nav class="nav-cont">
-    <div class="start_reading_links">
-        <a class="read_link" href="/Read/Novel">
-            <i class="bi bi-book"></i><span>Novel</span>
-        </a>
-        <a class="read_link" href="/Read/Fanfiction">
-            <i class="bi bi-book"></i><span>Fanfiction</span>
-        </a>
-        <a class="read_link" href="/Read/Graphical">
-            <i class="bi bi-book"></i><span>Graphical</span>
-        </a>
-        <a class="read_link" href="/Read/Script">
-            <i class="bi bi-book"></i><span>Script</span>
-        </a>
-        <a class="read_link" href="/Read/Plot">
-            <i class="bi bi-book"></i><span>Plot</span>
-        </a>
-    </div>
+<div class="read-cont">
+    <nav class="nav-cont">
+        <div class="start_reading_links">
+            <a class="read_link" href="/Read/Novel">
+                <i class="bi bi-book"></i><span>Novel</span>
+            </a>
+            <a class="read_link" href="/Read/Fanfiction">
+                <i class="bi bi-book"></i><span>Fanfiction</span>
+            </a>
+            <a class="read_link" href="/Read/Graphical">
+                <i class="bi bi-book"></i><span>Graphical</span>
+            </a>
+            <a class="read_link" href="/Read/Script">
+                <i class="bi bi-book"></i><span>Script</span>
+            </a>
+            <a class="read_link" href="/Read/Plot">
+                <i class="bi bi-book"></i><span>Plot</span>
+            </a>
+        </div>
 
 
-    <div class="nav-ad1">
+        <div class="nav-ad1">
+
+        </div>
+    </nav>
+    <div class="posts-cont">
+        <div class="post-options">
+            <div class="po-orderby">
+                <p class="orderby-btn po-option" id="orderby-btn">Order By</p>
+            </div>
+            <span class="po-filters po-option" id="po-filter">
+                Filter
+            </span>
+        </div>
+        <div class="post-list-warnings">
+            <div id="plwarning">
+                <h1>Something went wrong.</h1>
+                <h3 class="plwarning-message"></h3>
+                <img class="plwarning-img" src="" alt="Error while fetching posts">
+            </div>
+        </div>
+        <div class="post-list pl-masonry" id="postListSection">
+            <div id="pl-column1">
+            </div>
+            <div id="pl-column2">
+            </div>
+        </div>
 
     </div>
-</nav>
-<div class="posts-cont">
-    <div class="post-options">
-        <div class="po-orderby">
-            <p class="orderby-btn po-option" id="orderby-btn">Order By</p>
-        </div>
-        <span class="po-filters po-option" id="po-filter">
-            Filter
-        </span>
-    </div>
-    <div class="post-list-warnings">
-        <div id="plwarning">
-            <h1>Something went wrong.</h1>
-            <h3 class="plwarning-message"></h3>
-            <img class="plwarning-img" src="" alt="Error while fetching posts">
-        </div>
-    </div>
-    <div class="post-list pl-masonry" id="postListSection">
-        <div id="pl-column1">
-        </div>
-        <div id="pl-column2">
-        </div>
-    </div>
-
 </div>
