--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -18,142 +18,6 @@ body {
   border: 2px solid #340505;
 }
 
-main {
-  display: flex;
-  flex-direction: row;
-  color: var(--text-color1);
-  position: relative;
-}
-
-.posts-cont {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-.posts-cont .post-options {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  width: 100%;
-}
-.posts-cont .post-options .po-option {
-  font-size: 1.6rem;
-  text-shadow: 0px 0px 6px var(--text-boxshadow1);
-  font-family: "Josefin Sans", sans-serif;
-  cursor: pointer;
-}
-.posts-cont .post-options .po-option:hover {
-  text-decoration: underline;
-}
-.posts-cont .post-options .po-orderby {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: baseline;
-}
-.posts-cont .post-options .po-orderby .orderby-btn {
-  margin-right: 16px;
-}
-.posts-cont .post-options .po-type {
-  margin-left: auto;
-  margin-right: 36px;
-}
-.posts-cont .post-list-warnings #plwarning {
-  margin-top: 16px;
-  display: none;
-  flex-direction: column;
-  gap: 10px;
-  color: var(--text-color1);
-  text-align: center;
-}
-.posts-cont .post-list-warnings #plwarning h1 {
-  font-family: "Josefin Sans";
-}
-.posts-cont .post-list-warnings #plwarning h3 {
-  font-family: "Raleway", sans-serif;
-}
-.posts-cont .post-list-warnings #plwarning img {
-  width: 40%;
-  height: auto;
-  margin: 0 auto;
-}
-.posts-cont .post-list {
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  flex-direction: column;
-  gap: 12px 0;
-}
-.posts-cont .post-list #pl-column1,
-.posts-cont .post-list #pl-column2 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 12px 0;
-}
-.posts-cont .post-list #pl-column1 .post,
-.posts-cont .post-list #pl-column2 .post {
-  background-color: var(--post-bgcolor1);
-}
-.posts-cont .post-list #pl-column1 .post .p-info, .posts-cont .post-list #pl-column1 .post .usercard-onhover,
-.posts-cont .post-list #pl-column2 .post .p-info,
-.posts-cont .post-list #pl-column2 .post .usercard-onhover {
-  background-color: var(--post-bgcolor1);
-}
-
-.nav-cont {
-  display: none;
-  flex-direction: column;
-  width: 200px;
-  margin: 20px 20px 0 0;
-  flex-shrink: 0;
-  font-family: "Itim", cursive;
-  color: var(--text-color1);
-}
-.nav-cont .start_reading_links {
-  width: 100%;
-  gap: 8px;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
-}
-.nav-cont .start_reading_links .read_link {
-  padding: 10px 10px 10px 14px;
-  border-radius: 6px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  box-shadow: -3px 3px 4px -5px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: -3px 3px 4px -5px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: -3px 3px 4px -5px rgba(0, 0, 0, 0.5);
-  background-color: var(--read-bgcolor1);
-}
-.nav-cont .start_reading_links .read_link:hover {
-  background-color: var(--read-bgcolor2);
-}
-.nav-cont .start_reading_links .read_link span {
-  font-size: 1.2rem;
-  height: 1.2rem;
-  font-family: "Solitreo";
-}
-.nav-cont .start_reading_links .read_link i {
-  font-size: 1.2rem;
-  height: 1.1rem;
-  display: flex;
-}
-.nav-cont .nav-ad1 {
-  /* Safari & IE */
-  position: sticky;
-  top: 20px;
-  background-color: rgb(139, 136, 199);
-  border-radius: 10px;
-  width: 100%;
-  height: 200px;
-}
-
 .orderby-cont {
   padding-top: 6%;
 }
@@ -353,7 +217,7 @@ main {
 .filter-cont .filter-box .f-body .f-options .f-allow18 {
   outline: none;
   border: 1px solid #5e5e5e;
-  background: var(--background-color2);
+  background: var(--input-bg1);
   color: var(--text-color1);
   padding: 4px;
   border-radius: 5px;
@@ -465,6 +329,148 @@ main {
   background-color: #0f546d;
 }
 
+main {
+  display: flex;
+  flex-direction: row;
+  color: var(--text-color1);
+  position: relative;
+}
+main .read-cont {
+  padding-top: 10px;
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
+
+.posts-cont {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+.posts-cont .post-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+}
+.posts-cont .post-options .po-option {
+  font-size: 1.6rem;
+  text-shadow: 0px 0px 6px var(--text-boxshadow1);
+  font-family: "Josefin Sans", sans-serif;
+  cursor: pointer;
+}
+.posts-cont .post-options .po-option:hover {
+  text-decoration: underline;
+}
+.posts-cont .post-options .po-orderby {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.posts-cont .post-options .po-orderby .orderby-btn {
+  margin-right: 16px;
+}
+.posts-cont .post-options .po-type {
+  margin-left: auto;
+  margin-right: 36px;
+}
+.posts-cont .post-list-warnings #plwarning {
+  margin-top: 16px;
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+  color: var(--text-color1);
+  text-align: center;
+}
+.posts-cont .post-list-warnings #plwarning h1 {
+  font-family: "Josefin Sans";
+}
+.posts-cont .post-list-warnings #plwarning h3 {
+  font-family: "Raleway", sans-serif;
+}
+.posts-cont .post-list-warnings #plwarning img {
+  width: 40%;
+  height: auto;
+  margin: 0 auto;
+}
+.posts-cont .post-list {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 12px 0;
+}
+.posts-cont .post-list #pl-column1,
+.posts-cont .post-list #pl-column2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 12px 0;
+}
+.posts-cont .post-list #pl-column1 .post,
+.posts-cont .post-list #pl-column2 .post {
+  background-color: var(--post-bgcolor1);
+}
+.posts-cont .post-list #pl-column1 .post .p-info,
+.posts-cont .post-list #pl-column1 .post .usercard-onhover,
+.posts-cont .post-list #pl-column2 .post .p-info,
+.posts-cont .post-list #pl-column2 .post .usercard-onhover {
+  background-color: var(--post-bgcolor1);
+}
+
+.nav-cont {
+  display: none;
+  flex-direction: column;
+  width: 200px;
+  flex-shrink: 0;
+  font-family: "Itim", cursive;
+  color: var(--text-color1);
+}
+.nav-cont .start_reading_links {
+  width: 100%;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.nav-cont .start_reading_links .read_link {
+  padding: 10px 10px 10px 14px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  box-shadow: -3px 3px 4px -5px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: -3px 3px 4px -5px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: -3px 3px 4px -5px rgba(0, 0, 0, 0.5);
+  background-color: var(--read-bgcolor1);
+}
+.nav-cont .start_reading_links .read_link:hover {
+  background-color: var(--read-bgcolor2);
+}
+.nav-cont .start_reading_links .read_link span {
+  font-size: 1.2rem;
+  height: 1.2rem;
+  font-family: "Solitreo";
+}
+.nav-cont .start_reading_links .read_link i {
+  font-size: 1.2rem;
+  height: 1.1rem;
+  display: flex;
+}
+.nav-cont .nav-ad1 {
+  /* Safari & IE */
+  position: sticky;
+  top: 20px;
+  background-color: rgb(139, 136, 199);
+  border-radius: 10px;
+  width: 100%;
+  height: 200px;
+}
+
 .pagination {
   width: 100%;
   padding: 10px;
@@ -505,11 +511,11 @@ main {
 }
 
 @media (min-width: 768px) {
-  .nav-cont {
-    display: flex;
+  main .read-cont {
+    padding-top: 20px;
   }
-  .post-options {
-    padding: 20px 10px 10px !important;
+  main .read-cont .nav-cont {
+    display: flex;
   }
   .obt-content .obt-item i {
     top: 0 !important;
