new create post creating cover img has a bug

--- a/OmneFictio.Web/Views/Home/Create.cshtml
+++ b/OmneFictio.Web/Views/Home/Create.cshtml
@@ -16,14 +16,22 @@
             <i class="bi bi-x-lg" id="c-taglist-close"></i>
         </div>
         <ul class="" id="c-taglist-list" data-action="include">
-            <li data-taglistvalue="action">Action</li>
-            <li data-taglistvalue="comedy">Comedy</li>
-            <li data-taglistvalue="fantasy">Fantasy</li>
-            <li data-taglistvalue="romance">Romance</li>
-            <li data-taglistvalue="dram">Dram</li>
-            <li data-taglistvalue="horror">Horror</li>
-            <li data-taglistvalue="adventure">Adventure</li>
-            <li data-taglistvalue="science_fiction">Science fiction</li>
+            <li data-taglistvalue="2">Sci-Fi</li>
+            <li data-taglistvalue="3">Tragedy</li>
+            <li data-taglistvalue="4">Spiritual</li>
+            <li data-taglistvalue="5">Mystery</li>
+            <li data-taglistvalue="6">Parody</li>
+            <li data-taglistvalue="7">Horror</li>
+            <li data-taglistvalue="8">Fantasy</li>
+            <li data-taglistvalue="9">Crime</li>
+            <li data-taglistvalue="10">Western</li>
+            <li data-taglistvalue="11">Supernatural</li>
+            <li data-taglistvalue="12">Poetry</li>
+            <li data-taglistvalue="13">Adventure</li>
+            <li data-taglistvalue="14">Humor</li>
+            <li data-taglistvalue="15">Romance</li>
+            <li data-taglistvalue="16">Family</li>
+            <li data-taglistvalue="17">Drama</li>
         </ul>
     </div>
 </div>
@@ -77,14 +85,14 @@
             </select>
         </div>
         <ul class="f-serieslist-list" id="c-serieslist-list">
-            <li data-seriesval="Overlord">Overlord</li>
-            <li data-seriesval="Harry_Potter">Harry Potter</li>
-            <li data-seriesval="The_Boys">The Boys</li>
-            <li data-seriesval="Stranger_Things">Stranger Things</li>
-            <li data-seriesval="Breaking_Bad">Breaking Bad</li>
-            <li data-seriesval="Game_of_Thrones">Game of Thrones</li>
-            <li data-seriesval="Hunger_Games">Hunger Games</li>
-            <li data-seriesval="Pirates_of_the_Caribbean">Pirates of the Caribbean</li>
+            <li data-seriesval="1">Pirates of the Caribbean</li>
+            <li data-seriesval="2">Star Trek</li>
+            <li data-seriesval="3">Avengers</li>
+            <li data-seriesval="4">Thor</li>
+            <li data-seriesval="5">X-Men</li>
+            <li data-seriesval="6">Supernatural</li>
+            <li data-seriesval="7">Twilight</li>
+            <li data-seriesval="8">Doctor Who</li>
         </ul>
     </div>
 </div>
@@ -95,11 +103,11 @@
         <h2>Create</h2>
         <select id="create-category">
             <optgroup label="Fiction">
-                <option value="Novel">Novel</option>
-                <option value="Fanfiction">Fanfiction</option>
-                <option value="Graphical">Graphical</option>
-                <option value="Script">Script</option>
-                <option value="Plot">Plot</option>
+                <option data-id="1" value="Novel">Novel</option>
+                <option data-id="2" value="Fanfiction">Fanfiction</option>
+                <option data-id="3" value="Graphical">Graphical</option>
+                <option data-id="4" value="Script">Script</option>
+                <option data-id="5" value="Plot">Plot</option>
             </optgroup>
             <optgroup label="Others">
                 <option value="Community_post">Community post</option>
