--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -20,8 +20,9 @@
     <div class="post-main" data-postid="">
         <div class="psection-1">
             <div class="p-cover">
-                <img src="/images/covers/" class="p-basecover"
-                    onerror="this.onerror=null; this.closest('.p-cover').remove()">
+                <img src="/images/covers/" class="p-basecover">
+                <!--<img src="/images/covers/" class="p-basecover"
+                    onerror="this.onerror=null; this.closest('.p-cover').remove()">-->
             </div>
             <div class="p-postinfo">
                 <div class="p-primary">
