--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -547,7 +547,7 @@
                         <ul class="ad-linklist">
                             @if (userId != null)
                             {
-                                <li><span id="loggedin-username" data-userid="@userId">@username</span></li>
+                                <li><span id="loggedin-username" data-userid="@userId" data-userpic="@userPicture">@username</span></li>
                                 <li><a href="/u/@username">Profile</a></li>
                                 <li><a href="/u/@username/saved">Library</a></li>
                                 <li><a href="/u/@username/friends">Friends</a></li>
