top posts fixed

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -147,6 +147,9 @@
                     </div>
                 </div>
                 <div class="p-body">
+                    <div class="nsfw-warning-cont" onclick="this.closest('.nsfw_post').classList.remove('nsfw_post'); this.remove()">
+                        <span>NSFW</span>
+                    </div>
                     <div class="p-cover">
                         <span class="p-showCoverBtn">Show cover</span>
                         <img src="" onerror="this.onerror=null; this.closest('.p-cover').remove()">
