--- a/OmneFictio.Web/wwwroot/css/postitem.css
+++ b/OmneFictio.Web/wwwroot/css/postitem.css
@@ -80,6 +80,16 @@
   margin-bottom: unset;
 }
 
+.post.nsfw_post .p-body .nsfw-warning-cont {
+  display: flex;
+}
+.post.nsfw_post .p-cover {
+  filter: blur(6px);
+}
+.post.nsfw_post .p-desc {
+  filter: blur(3px);
+}
+
 .post-body {
   display: flex;
   flex-direction: column;
@@ -229,6 +239,26 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  position: relative;
+}
+.post-body .p-body .nsfw-warning-cont {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  cursor: pointer;
+}
+.post-body .p-body .nsfw-warning-cont span {
+  font-size: 1.4rem;
+  font-family: "Itim", cursive;
+  color: var(--text-color1);
+  opacity: 0.9;
+  filter: blur(1px);
 }
 .post-body .p-body .p-cover {
   flex-shrink: 0;
