Get account information

--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -20,19 +20,19 @@
     </div>
     <div class="settings-link_cont">
         <div class="mobile_nav">
-            <a data-href="/settings/profile"><i class="bi bi-person"></i></a>
+            <a data-href="/settings/account"><i class="bi bi-person"></i></a>
             <a data-href="/settings"><i class="bi bi-gear"></i></a>
             <a data-href="/settings/customize"><i class="bi bi-sliders2"></i></a>
         </div>
         <ul class="desktop_nav">
-            <li><a data-href="/settings/profile">Profile</a></li>
+            <li><a data-href="/settings/account">Account</a></li>
             <li><a data-href="/settings">Settings</a></li>
             <li><a data-href="/settings/customize">Customize</a></li>
         </ul>
     </div>
 </nav>
 <div class="settings_body">
-    <div class="s-profile_settings">
+    <div class="s-account_settings">
         <div class="ps-row">
             <div class="ps-cell">
                 <span>Display Name</span>
