--- a/OmneFictio.Web/wwwroot/css/settings.css
+++ b/OmneFictio.Web/wwwroot/css/settings.css
@@ -88,30 +88,30 @@ nav .settings-link_cont .desktop_nav li a.active {
   border-bottom: 1px solid var(--background-color2);
 }
 
-.settings_body .s-profile_settings {
+.settings_body .s-account_settings {
   display: flex;
   flex-direction: column;
   width: 100%;
   padding: 12px;
 }
-.settings_body .s-profile_settings .ps-row {
+.settings_body .s-account_settings .ps-row {
   display: flex;
   flex-direction: column;
   gap: 8px 30px;
 }
-.settings_body .s-profile_settings .ps-row .ps-cell {
+.settings_body .s-account_settings .ps-row .ps-cell {
   display: flex;
   flex-direction: column;
   gap: 6px;
 }
-.settings_body .s-profile_settings .ps-row .ps-cell > span,
-.settings_body .s-profile_settings .ps-row .ps-cell label {
+.settings_body .s-account_settings .ps-row .ps-cell > span,
+.settings_body .s-account_settings .ps-row .ps-cell label {
   font-size: 1.2rem;
   font-family: "Gudea";
 }
-.settings_body .s-profile_settings .ps-row .ps-cell > input,
-.settings_body .s-profile_settings .ps-row .ps-cell textarea,
-.settings_body .s-profile_settings .ps-row .ps-cell select {
+.settings_body .s-account_settings .ps-row .ps-cell > input,
+.settings_body .s-account_settings .ps-row .ps-cell textarea,
+.settings_body .s-account_settings .ps-row .ps-cell select {
   flex-grow: 1;
   border: none;
   outline: none;
@@ -123,34 +123,34 @@ nav .settings-link_cont .desktop_nav li a.active {
   margin-bottom: 10px;
   font-family: "Itim", cursive;
 }
-.settings_body .s-profile_settings .ps-ppic_cont {
+.settings_body .s-account_settings .ps-ppic_cont {
   width: 120px;
   height: 120px;
   border-radius: 8px;
   background-color: var(--background-color2);
   margin-bottom: 10px;
 }
-.settings_body .s-profile_settings .ps-preferences {
+.settings_body .s-account_settings .ps-preferences {
   margin: 10px 0;
   padding-left: 16px;
   font-family: "Josefin Sans", sans-serif;
 }
-.settings_body .s-profile_settings .psr-preferences label {
+.settings_body .s-account_settings .psr-preferences label {
   display: flex;
   align-items: center;
 }
-.settings_body .s-profile_settings .psr-preferences label input[type=checkbox] {
+.settings_body .s-account_settings .psr-preferences label input[type=checkbox] {
   height: 16px;
   width: 16px;
   margin-left: 10px;
 }
-.settings_body .s-profile_settings .psr-actions {
+.settings_body .s-account_settings .psr-actions {
   flex-direction: row;
   justify-content: center;
   margin-top: 36px;
   gap: 20%;
 }
-.settings_body .s-profile_settings .psr-actions > button {
+.settings_body .s-account_settings .psr-actions > button {
   border: none;
   outline: none;
   border-radius: 6px;
@@ -160,16 +160,16 @@ nav .settings-link_cont .desktop_nav li a.active {
   font-family: "Gudea", cursive;
   font-size: 1.2rem;
 }
-.settings_body .s-profile_settings .psr-actions > button:first-child {
+.settings_body .s-account_settings .psr-actions > button:first-child {
   background-color: var(--button-red);
 }
-.settings_body .s-profile_settings .psr-actions > button:first-child:hover {
+.settings_body .s-account_settings .psr-actions > button:first-child:hover {
   background-color: var(--button-red-hover);
 }
-.settings_body .s-profile_settings .psr-actions > button:last-child {
+.settings_body .s-account_settings .psr-actions > button:last-child {
   background-color: var(--button-green);
 }
-.settings_body .s-profile_settings .psr-actions > button:last-child:hover {
+.settings_body .s-account_settings .psr-actions > button:last-child:hover {
   background-color: var(--button-green-hover);
 }
 
@@ -227,13 +227,13 @@ nav .settings-link_cont .desktop_nav li a.active {
 }
 
 @media (min-width: 576px) {
-  .s-profile_settings {
+  .s-account_settings {
     padding: 16px !important;
   }
-  .s-profile_settings .ps-row {
+  .s-account_settings .ps-row {
     flex-direction: row !important;
   }
-  .s-profile_settings .ps-row .ps-cell {
+  .s-account_settings .ps-row .ps-cell {
     width: 50%;
   }
   .s-library {
@@ -276,7 +276,7 @@ nav .settings-link_cont .desktop_nav li a.active {
   }
 }
 @media (max-width: 279px) {
-  .s-profile_settings .psr-actions button {
+  .s-account_settings .psr-actions button {
     padding: 8px 3% !important;
   }
 }/*# sourceMappingURL=settings.css.map */
